--- a/app/src/main/res/layout/activity_user_sign_up_form.xml
+++ b/app/src/main/res/layout/activity_user_sign_up_form.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.Activities.UserInfoForm">
+    tools:context=".UI.Activities.UserSignUpFormActivity">
 
     <TextView
-        android:id="@+id/user_input_form_title"
+        android:id="@+id/user_sign_up_form_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="@string/user_info_form_title"
+        android:text="@string/user_sign_up_form_title"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.436"
@@ -20,27 +20,27 @@
 
 
     <EditText
-        android:id="@+id/user_input_form_first_name"
+        android:id="@+id/user_sign_up_form_first_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/user_info_form_first_name"
+        android:hint="@string/user_sign_up_form_first_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.184"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_input_form_title" />
+        app:layout_constraintTop_toBottomOf="@id/user_sign_up_form_title" />
 
     <EditText
-        android:id="@+id/user_input_form_last_name"
+        android:id="@+id/user_sign_up_form_last_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:ems="10"
-        android:hint="@string/user_info_form_last_name"
-        app:layout_constraintEnd_toEndOf="@id/user_input_form_first_name"
-        app:layout_constraintStart_toStartOf="@id/user_input_form_first_name"
-        app:layout_constraintTop_toBottomOf="@id/user_input_form_first_name" />
+        android:hint="@string/user_sign_up_form_last_name"
+        app:layout_constraintEnd_toEndOf="@id/user_sign_up_form_first_name"
+        app:layout_constraintStart_toStartOf="@id/user_sign_up_form_first_name"
+        app:layout_constraintTop_toBottomOf="@id/user_sign_up_form_first_name" />
 
     <!--    <TextView-->
     <!--        android:id="@+id/gender"-->
@@ -100,86 +100,86 @@
     <!--    </RadioGroup>-->
 
     <EditText
-        android:id="@+id/user_info_form_email"
+        android:id="@+id/user_sign_up_form_email"
         android:layout_width="wrap_content"
         android:layout_height="46dp"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/user_info_form_email"
+        android:hint="@string/user_sign_up_form_email"
         android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="@id/user_input_form_last_name"
-        app:layout_constraintStart_toStartOf="@id/user_input_form_last_name"
-        app:layout_constraintTop_toBottomOf="@id/user_input_form_last_name" />
+        app:layout_constraintEnd_toEndOf="@id/user_sign_up_form_last_name"
+        app:layout_constraintStart_toStartOf="@id/user_sign_up_form_last_name"
+        app:layout_constraintTop_toBottomOf="@id/user_sign_up_form_last_name" />
 
     <EditText
-        android:id="@+id/user_info_form_password"
+        android:id="@+id/user_sign_up_form_password"
         android:layout_width="wrap_content"
         android:layout_height="46dp"
         android:layout_marginTop="10dp"
         android:ems="10"
-        android:hint="@string/user_info_form_password"
+        android:hint="@string/user_sign_up_form_password"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@id/user_info_form_email"
-        app:layout_constraintStart_toStartOf="@id/user_info_form_email"
-        app:layout_constraintTop_toBottomOf="@id/user_info_form_email" />
+        app:layout_constraintEnd_toEndOf="@id/user_sign_up_form_email"
+        app:layout_constraintStart_toStartOf="@id/user_sign_up_form_email"
+        app:layout_constraintTop_toBottomOf="@id/user_sign_up_form_email" />
 
 
     <EditText
-        android:id="@+id/user_info_form_description"
+        android:id="@+id/user_sign_up_form_description"
         android:layout_width="wrap_content"
         android:layout_height="52dp"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/user_info_form_description"
+        android:hint="@string/user_sign_up_form_description"
         android:inputType="text"
-        app:layout_constraintEnd_toEndOf="@id/user_info_form_password"
-        app:layout_constraintStart_toStartOf="@id/user_info_form_password"
-        app:layout_constraintTop_toBottomOf="@id/user_info_form_password" />
+        app:layout_constraintEnd_toEndOf="@id/user_sign_up_form_password"
+        app:layout_constraintStart_toStartOf="@id/user_sign_up_form_password"
+        app:layout_constraintTop_toBottomOf="@id/user_sign_up_form_password" />
 
 
     <EditText
-        android:id="@+id/user_info_form_credit_card"
+        android:id="@+id/user_sign_up_form_credit_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/user_info_form_credit_card"
+        android:hint="@string/user_sign_up_form_credit_card"
         android:inputType="phone"
-        app:layout_constraintEnd_toEndOf="@id/user_info_form_description"
-        app:layout_constraintStart_toStartOf="@id/user_info_form_description"
-        app:layout_constraintTop_toBottomOf="@id/user_info_form_description" />
+        app:layout_constraintEnd_toEndOf="@id/user_sign_up_form_description"
+        app:layout_constraintStart_toStartOf="@id/user_sign_up_form_description"
+        app:layout_constraintTop_toBottomOf="@id/user_sign_up_form_description" />
 
     <EditText
-        android:id="@+id/user_info_form_address"
+        android:id="@+id/user_sign_up_form_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/user_info_form_address"
+        android:hint="@string/user_sign_up_form_address"
         android:inputType="text"
         android:maxLines="1"
-        app:layout_constraintEnd_toEndOf="@id/user_info_form_credit_card"
-        app:layout_constraintStart_toStartOf="@id/user_info_form_credit_card"
-        app:layout_constraintTop_toBottomOf="@id/user_info_form_credit_card" />
+        app:layout_constraintEnd_toEndOf="@id/user_sign_up_form_credit_card"
+        app:layout_constraintStart_toStartOf="@id/user_sign_up_form_credit_card"
+        app:layout_constraintTop_toBottomOf="@id/user_sign_up_form_credit_card" />
 
     <CheckBox
-        android:id="@+id/user_info_form_conditions"
+        android:id="@+id/user_sign_up_form_conditions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:layout_marginRight="30dp"
-        android:text="@string/user_info_form_conditions"
+        android:text="@string/user_sign_up_form_conditions"
         style="@style/CallToActionDarkText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/user_info_form_submit_button" />
+        app:layout_constraintBottom_toTopOf="@id/user_sign_up_form_submit_button" />
 
     <Button
-        android:id="@+id/user_info_form_submit_button"
+        android:id="@+id/user_sign_up_form_submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:onClick="submitbuttonhandler"
-        android:text="@string/user_info_form_submit"
+        android:text="@string/user_sign_up_form_submit"
         style="@style/CallToAction"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
