--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,4 +33,7 @@
         <item name="android:adjustViewBounds">true</item>
         <item name="android:scaleType">fitCenter</item>
     </style>
+
+    <style name="BottomMenuBar" parent="Widget.MaterialComponents.BottomNavigationView.Colored">
+    </style>
 </resources>
