--- a/app/src/main/res/layout/activity_complaint.xml
+++ b/app/src/main/res/layout/activity_complaint.xml
@@ -49,6 +49,16 @@
         app:layout_constraintStart_toStartOf="@id/complaint_source"
         app:layout_constraintTop_toBottomOf="@id/complaint_destination" />
 
+    <TextView
+        android:id="@+id/complaint_end_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:ems="10"
+        android:hint="The end date"
+        app:layout_constraintStart_toStartOf="@id/complaint_source"
+        app:layout_constraintTop_toBottomOf="@id/complaint_description" />
+
     <CheckBox
         android:id="@+id/complaint_permanent"
         android:layout_width="wrap_content"
@@ -56,7 +66,7 @@
         android:layout_marginTop="30dp"
         android:text="Permanent Suspension"
         app:layout_constraintStart_toStartOf="@id/complaint_source"
-        app:layout_constraintTop_toBottomOf="@id/complaint_description"/>
+        app:layout_constraintTop_toBottomOf="@id/complaint_end_date"/>
 
     <Button
         android:id="@+id/complaint_date"
@@ -65,4 +75,21 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/complaint_permanent"
         app:layout_constraintStart_toStartOf="@id/complaint_source"/>
+
+    <Button
+        android:id="@+id/complaint_cancel"
+        android:text="Cancel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/complaint_date"
+        app:layout_constraintStart_toStartOf="@id/complaint_source"/>
+
+    <Button
+        android:id="@+id/complaint_submit"
+        android:text="Submit"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintTop_toBottomOf="@id/complaint_date"
+        app:layout_constraintStart_toEndOf="@id/complaint_cancel" />
 </androidx.constraintlayout.widget.ConstraintLayout>
