--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,53 +8,6 @@
     android:id="@+id/relativeLayout"
     android:animateLayoutChanges="true">
 
-    <!--Button for logout from the app-->
-
-<!--    <Button-->
-<!--        android:id="@+id/idBtnLogout"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Logout"-->
-<!--        android:textAllCaps="false"-->
-<!--        android:textColor="#263238"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--    <Button-->
-<!--        android:id="@+id/btnDeleteRecipe"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Delete Recipe"-->
-<!--        android:textAllCaps="false"-->
-<!--        android:textColor="#263238"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/displayUser"-->
-<!--        android:layout_width="384dp"-->
-<!--        android:layout_height="39dp"-->
-<!--        android:text="@string/displayUser"-->
-<!--        android:textAlignment="center"-->
-<!--        android:textColor="#D96545"-->
-<!--        android:textStyle="bold"-->
-<!--        android:autoSizeTextType="uniform"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.387"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintVertical_bias="0.103" />-->
-
-<!--    <ImageView-->
-<!--        android:id="@+id/imageView3"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintBottom_toTopOf="@id/home_bottom_navigation"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:srcCompat="@drawable/catburger"/>-->
-
     <androidx.viewpager2.widget.ViewPager2
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -82,7 +35,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_add_24"
-            app:layout_anchor="@id/home_bottom_app_bar" />
+            app:layout_anchor="@id/home_bottom_app_bar"
+            />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
