--- a/app/src/main/res/layout/activity_complaint.xml
+++ b/app/src/main/res/layout/activity_complaint.xml
@@ -13,50 +13,53 @@
         android:text="@string/complaint"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.436"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/complaint_source"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
         android:hint="The complainer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.184"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/complaint_form_title" />
 
     <TextView
         android:id="@+id/complaint_destination"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
         android:hint="The target"
         app:layout_constraintStart_toStartOf="@id/complaint_source"
+        app:layout_constraintEnd_toEndOf="@id/complaint_source"
         app:layout_constraintTop_toBottomOf="@id/complaint_source" />
 
     <TextView
         android:id="@+id/complaint_description"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
         android:hint="A Complaint description"
         app:layout_constraintStart_toStartOf="@id/complaint_source"
+        app:layout_constraintEnd_toEndOf="@id/complaint_source"
         app:layout_constraintTop_toBottomOf="@id/complaint_destination" />
 
     <TextView
         android:id="@+id/complaint_end_date"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="60dp"
         android:ems="10"
         android:hint="The end date"
         app:layout_constraintStart_toStartOf="@id/complaint_source"
+        app:layout_constraintEnd_toEndOf="@id/complaint_source"
         app:layout_constraintTop_toBottomOf="@id/complaint_description" />
 
     <CheckBox
@@ -80,6 +83,7 @@
         android:id="@+id/complaint_cancel"
         android:text="Cancel"
         android:layout_width="0dp"
+        android:layout_marginTop="50dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/complaint_date"
         app:layout_constraintStart_toStartOf="@id/complaint_source"/>
@@ -90,6 +94,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        app:layout_constraintTop_toBottomOf="@id/complaint_date"
-        app:layout_constraintStart_toEndOf="@id/complaint_cancel" />
+        app:layout_constraintTop_toTopOf="@id/complaint_cancel"
+        app:layout_constraintStart_toEndOf="@id/complaint_cancel"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
