--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -121,16 +121,29 @@
         app:layout_constraintStart_toStartOf="@id/recipe_price_label"/>
 
     <Button
+        android:id="@+id/recipe_save"
+        android:text="@string/save"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintTop_toBottomOf="@id/recipe_offered"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/recipe_delete"/>
+
+    <Button
         android:id="@+id/recipe_delete"
         android:text="@string/delete"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
 
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="5dp"
         android:layout_marginEnd="40dp"
         app:layout_constraintTop_toBottomOf="@id/recipe_offered"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/recipe_save"
         app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
