--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -6,15 +6,24 @@
     android:name="com.SEG2505_Group8.mealer.UI.Activities.MenuFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/menu_filter_Label"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:text="@string/filters"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="16dp"
+        android:gravity="center"/>
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/menu_chips"
         android:layout_width="0dp"
         android:layout_height="60dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/menu_filter_Label"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp">
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp">
         <com.google.android.material.chip.Chip
             android:id="@+id/menu_chips_offered"
             android:layout_width="wrap_content"
@@ -30,7 +39,7 @@
         tools:context=".UI.Fragments.MenuFragment"
         tools:listitem="@layout/fragment_menu_item"
         app:layout_constraintTop_toBottomOf="@id/menu_chips"
-        app:layout_constraintStart_toStartOf="@id/menu_chips"
+        app:layout_constraintStart_toStartOf="@id/menu_filter_Label"
         app:layout_constraintEnd_toEndOf="@id/menu_chips"
         app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
