--- a/app/src/main/res/layout/activity_recipe_form.xml
+++ b/app/src/main/res/layout/activity_recipe_form.xml
@@ -65,6 +65,14 @@
         app:layout_constraintStart_toStartOf="@id/recipe_form_course"
         app:layout_constraintTop_toBottomOf="@id/recipe_form_category_chips" />
 
+    <Button
+        android:id="@+id/recipe_form_submit_category"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/action_submit"
+        app:layout_constraintStart_toEndOf="@id/recipe_form_categories"
+        app:layout_constraintTop_toTopOf="@id/recipe_form_categories" />
+
     <HorizontalScrollView
         android:id="@+id/scroll"
         android:layout_width="wrap_content"
@@ -84,7 +92,7 @@
         android:id="@+id/recipe_form_ingredients"
         android:layout_width="wrap_content"
         android:layout_height="46dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         android:ems="10"
         android:imeOptions="actionSend"
         android:hint="@string/form_ingredients"
@@ -93,6 +101,15 @@
         app:layout_constraintEnd_toEndOf="@id/recipe_form_categories"
         app:layout_constraintStart_toStartOf="@id/recipe_form_categories"
         app:layout_constraintTop_toBottomOf="@id/scroll" />
+
+    <Button
+        android:id="@+id/recipe_form_submit_ingredient"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/action_submit"
+        app:layout_constraintStart_toEndOf="@id/recipe_form_ingredients"
+        app:layout_constraintTop_toTopOf="@id/recipe_form_ingredients" />
+
 
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/recipe_form_allergen_chips"
@@ -106,7 +123,7 @@
         android:id="@+id/recipe_form_allergens"
         android:layout_width="wrap_content"
         android:layout_height="52dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         android:ems="10"
         android:imeOptions="actionSend"
         android:hint="@string/form_allergens"
@@ -115,6 +132,14 @@
         app:layout_constraintEnd_toEndOf="@id/recipe_form_ingredients"
         app:layout_constraintStart_toStartOf="@id/recipe_form_ingredients"
         app:layout_constraintTop_toBottomOf="@id/recipe_form_allergen_chips" />
+
+    <Button
+        android:id="@+id/recipe_form_submit_allergen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/action_submit"
+        app:layout_constraintStart_toEndOf="@id/recipe_form_allergens"
+        app:layout_constraintTop_toTopOf="@id/recipe_form_allergens" />
 
 
     <EditText
